plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.jsoup:jsoup:1.15.4'
	testImplementation 'com.h2database:h2'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
	testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.0'
}

test {
	useJUnitPlatform()
	// 통합 테스트 프로필 설정
	systemProperty 'spring.profiles.active', 'integration'
}

tasks.named('test') {
	useJUnitPlatform()
}
